# crowdmirror

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  index.html  pyproject.toml
benchmarks/: __init__.py  policy_reaction.py  populationbench_lite.py
data_catalog/: policy_reaction_sources.json
demo/: app.js  index.html  promo.html  promo.js  styles.css
docs/: CURRENT_STATE.md  USER_GUIDE.md  active-spec.md  context-bootstrap.md
experiments/: _bootstrap.py  benchmark_matrix.py  dcl_prs_cross_domain_microdata_slices.py  dcl_prs_cross_domain_task_slice_smoke.py  dcl_prs_dynamic_simulation.py  dcl_prs_failure_attribution.py  dcl_prs_gate_index.py  dcl_prs_gss_policy_task_binding.py  dcl_prs_gss_policy_task_ingestion_smoke.py  dcl_prs_gss_public_use_download.py  dcl_prs_gss_real_repair_effect_validation.py  dcl_prs_mechanism_ablation_matrix.py  dcl_prs_mechanism_ablation_repeat_matrix.py  dcl_prs_mechanism_program.py  dcl_prs_multi_dataset_generalization_matrix.py  dcl_prs_official_public_use_file_probe.py  dcl_prs_product_cohort_report.py  dcl_prs_product_runtime_manifest.py  dcl_prs_public_dataset_ingestion.py  dcl_prs_repair_effect_validation_matrix.py  dcl_prs_repair_repeat_acceptance_matrix.py  dcl_prs_runtime_policy_reaction_predictions.py  dcl_prs_runtime_strong_baseline_trial.py  dcl_prs_strong_baseline_decision_matrix.py  dcl_prs_strong_baseline_matrix.py  evidence_manifest.py  evidence_matrix.py  lcdu_anes_anchor_fidelity_repair.py  lcdu_anes_baseline_family_matrix.py  lcdu_anes_cross_task_validation.py  lcdu_anes_finer_schema_robustness_matrix.py  (+193 more)
(+871 files in other folders)
