[project]
name = "circe"
version = "0.1.0"
description = "CIRCE: Causally Identifiable, Reliably Calibrated Emergence"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "mesa>=3.0",
    "networkx>=3.0",
    "pytest>=8.0",
    "anthropic>=0.40",
    "openai>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
